<resources>
    <string name="app_name">Masroofe</string>
    <string name="titleNameInSplashActivity">MASROOFE</string>
    <string name="mainTitleInLoginActivity">مرحبًا بك في تطبيق مصروفي</string>
    <string name="emailTitle"> اسم المستخدم أو البريد الإلكتروني</string>
    <string name="passwordTitle">كلمة السر</string>
    <string name="forgetPass"> هل نسيت كلمة السر ؟</string>
    <string name="loginBtnTitle">تسجيل الدخول</string>
    <string name="Settings">الإعدادات</string>
    <string name="noteInLoginActivity">حان الوقت لتعرف\n وين راتبك بطير</string>
    <string name="EditUserInformation">تعديل المعلومات الشخصية</string>
    <string name="UsingInformation">تعليمات الإستخدام</string>
    <string name="RefactorPassword">تعديل كلمة السر</string>
    <string name="income_during_the_month">كامل الدخل خلال الشهر</string>
    <string name="remainder_of_the_income">المتبقي من الدخل</string>
    <string name="quotation">تذكر، المالُ رَئيسٌ سَيِّء، لكِنَّهُ خادِمٌ مُمتاز...</string>
    <string name="your_extra_income">مجموع دخلك الإضافي</string>
    <string name="monthly_expenses">مجموع مصاريفك لهذا الشهر</string>
    <string name="last_month_expenses">مجموع مدخرات الشهر الماضي</string>
    <string name="previous_months">الأشهر السابقة</string>
    <string name="list">القائمة</string>
    <string name="full_name">الاسم الكامل</string>
    <string name="full_name_hint">Full Name</string>
    <string name="birth_day">تاريخ الميلاد</string>
    <string name="birthday_hint">Birthday</string>
    <string name="email_hint">Email or Username</string>
    <string name="create_account">إنشاء حساب</string>
    <string name="repeat_password_hint">Repeat Password</string>
    <string name="currentPassword">كلمة السر الحالية</string>
    <string name="currentPasswordHint">Current Password</string>
    <string name="newPassword">كلمة السر الجديدة</string>
    <string name="newPasswordHint">New Password</string>
    <string name="repeatNewPassword">إعادة كتابة كلمة السر الجديدة</string>
    <string name="repeatNewPasswordHint">Repeat New Password</string>
    <string name="updateInformation">تحديث المعلومات</string>
    <string name="updatePassword">تحديث كلمة السر</string>
    <string name="email">Email or Username</string>
    <string name="password">Password</string>
    <string name="createNewAccount">إنشاء حساب جديد</string>
    <string name="createAccount">أنشِئ حسابك</string>
    <string name="repeatPassword">إعادة كتابة كلمة السر</string>
    <string name="finishSignup"> إنهاء</string>
    <string name="nextSignup">التالي</string>
    <string name="fixed_income_message">هل تمتلك دخلًا ثابتًا ؟\nاضغط التالي لتزويدنا ببعض المعلومات</string>
    <string name="helloOfUserInFixedIncInfo">مرحبًا</string>
    <string name="complete_info_text">من فضلك، أكمل المعلومات التالية:</string>
    <string name="income_value">قيمة الدخل:</string>
    <string name="amount_of_income">Amount of income</string>
    <string name="type_income">نوع مصدر الدخل </string>
    <string name="add_income">إضافة</string>
    <string name="ChooseMonthAndYear">اختر السنة والشهر لإظهار المصاريف</string>
    <string name="Choose">اختيار</string>

    <string-array name="type_incomes">
        <item>يومي</item>
        <item>أسبوعي</item>
        <item>شهري</item>
    </string-array>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_add_expense">AddExpenseActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string-array name="add_money_account">
        <item>مصروف</item>
        <item>إيراد / دخل</item>
    </string-array>

</resources>