<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/jacarta"
    tools:context=".UpdateUserPassword">

    <TextView
        android:id="@+id/settingsText"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@drawable/top_background"
        android:paddingStart="100dp"
        android:paddingTop="45dp"
        android:paddingEnd="30dp"
        android:text="@string/RefactorPassword"
        android:textColor="@color/jacarta"
        android:textSize="30sp"
        android:textStyle="bold"
        tools:ignore="MissingConstraints,RtlSymmetry" />

    <ImageView
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/setting_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/settingsText">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="32dp"
            android:text="@string/currentPassword"
            android:textAlignment="textStart"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/currentPassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/edit_text"
            android:ems="10"
            android:hint="@string/currentPasswordHint"
            android:inputType="textPassword"
            android:padding="8dp"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="32dp"
            android:text="@string/newPassword"
            android:textAlignment="textStart"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/newPassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/edit_text"
            android:ems="10"
            android:hint="@string/newPasswordHint"
            android:inputType="textPassword"
            android:padding="8dp"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="32dp"
            android:text="@string/repeatNewPassword"
            android:textAlignment="textStart"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/repeatNewPassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/edit_text"
            android:ems="10"
            android:hint="@string/repeatNewPasswordHint"
            android:inputType="textPassword"
            android:padding="8dp"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/updateUserInformation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/btn_background"
            android:text="@string/updatePassword"
            android:textColor="@color/black"
            android:textStyle="bold" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>