<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/jacarta"
    tools:context=".FixedIncomeInfoActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@drawable/top_background"
        tools:ignore="MissingConstraints">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:gravity="right"
                >

                <TextView
                    android:id="@+id/hello"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="80dp"
                    android:text="دكتور سامر"
                    android:layout_marginEnd="10dp"
                    android:textColor="@color/jacarta"
                    android:textSize="30sp"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/nameOfUser"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="80dp"
                    android:text="@string/helloOfUserInFixedIncInfo"
                    android:textColor="@color/jacarta"
                    android:textSize="30sp"
                    android:textStyle="bold" />

            </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/infoCompleteText"
        android:layout_marginTop="50dp"
        android:text="@string/complete_info_text"
        style="@style/textViews_fixed_style"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="20sp"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="50dp"
            android:gravity="right"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:entries="@array/type_incomes"
                />

            <TextView
                android:id="@+id/fixedIncText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="textStart"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:text="@string/type_income"/>
        </LinearLayout>

    <TextView
        android:id="@+id/incomeValueText"
        android:layout_gravity="right"
        style="@style/label_feilds_style"
        android:layout_marginTop="30dp"
        android:textColor="@color/white"
        android:text="@string/income_value" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:hint="@string/amount_of_income"
        style="@style/fields_style"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/addIncomeBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_income"
        android:textSize="18sp"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:background="@drawable/btn_background"
        android:textColor="@color/jacarta"
        android:layout_marginTop="53dp"
        />
</LinearLayout>