<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/bright_gray"
    tools:context=".SettingsActivity">


    <TextView
        android:id="@+id/settingsText"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@drawable/top_background"
        android:paddingTop="50dp"
        android:paddingEnd="30dp"
        android:text="@string/Settings"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        tools:ignore="MissingConstraints,RtlSymmetry" />

    <ImageView
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/settings_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/settingsText">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/EditUserInformation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/btnsignup_background"
            android:text="@string/EditUserInformation"
            android:textColor="@color/head_filed_color"
            android:textStyle="bold"
            tools:ignore="MissingConstraints" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/RefactorPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/btnsignup_background"
            android:text="@string/RefactorPassword"
            android:textColor="@color/head_filed_color"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/UsingInformation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/btnsignup_background"
            android:text="@string/UsingInformation"
            android:textColor="@color/head_filed_color"
            android:textStyle="bold" />


    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.constraintlayout.widget.ConstraintLayout>
