<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/bright_gray"
    tools:context=".LoginActivity">


    <ImageView
        android:id="@+id/top_background_signup"
        android:layout_width="419dp"
        android:layout_height="278dp"
        android:layout_marginBottom="596dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/top_background" />

    <TextView
        android:id="@+id/titleInLoginActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mainTitleInLoginActivity"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/top_background_signup"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintHorizontal_bias="0.653"
        app:layout_constraintStart_toStartOf="@+id/top_background_signup"
        app:layout_constraintTop_toTopOf="@+id/top_background_signup"
        app:layout_constraintVertical_bias="0.236" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:text="@string/noteInLoginActivity"
        android:textColor="@color/champagne"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/imgMoney"
        app:layout_constraintTop_toBottomOf="@+id/titleInLoginActivity"
        app:layout_constraintVertical_bias="0.195" />

    <ImageView
        android:id="@+id/imgMoney"
        android:layout_width="235dp"
        android:layout_height="180dp"
        android:layout_marginTop="84dp"
        app:layout_constraintBottom_toBottomOf="@+id/top_background_signup"
        app:layout_constraintEnd_toEndOf="@+id/top_background_signup"
        app:layout_constraintHorizontal_bias="0.217"
        app:layout_constraintStart_toStartOf="@+id/top_background_signup"
        app:layout_constraintTop_toTopOf="@+id/titleInLoginActivity"
        app:layout_constraintVertical_bias="0.372"
        app:srcCompat="@drawable/money" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="450dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top_background_signup"
        app:layout_constraintVertical_bias="0.328">

        <TextView
            android:id="@+id/emailTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="32dp"
            android:text="@string/emailTitle"
            android:textAlignment="textStart"
            android:textColor="@color/head_filed_color"
            android:textSize="17sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/edit_text"
            android:ems="10"
            android:hint="Email"
            android:inputType="textPersonName"
            android:padding="8dp"
            android:textColor="@color/place_holder_color"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/passwordTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="32dp"
            android:text="@string/passwordTitle"
            android:textAlignment="textStart"
            android:textColor="@color/head_filed_color"
            android:textSize="17sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/edit_text"
            android:ems="10"
            android:hint="Password"
            android:inputType="textPersonName"
            android:padding="8dp"
            android:textColor="@color/place_holder_color"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/forgetPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:text="@string/forgetPass"
            android:textAlignment="textStart"
            android:textColor="#2f3363" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/loginBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/btn_background"
            android:text="@string/loginBtnTitle"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/signUpBtnInLoginActivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/btnsignup_background"
            android:text="إنشاء حساب جديد"
            android:textColor="@color/head_filed_color"
            android:textStyle="bold" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

